compiler/testData/checkerWithErrorTypes/quick/regressions/kt618.jet
namespace lol

class B() {
    fun plusAssign(other : B) : String {
        return "s"
    }
    fun minusAssign(other : B) : String {
        return "s"
    }
    fun modAssign(other : B) : String {
        return "s"
    }
    fun divAssign(other : B) : String {
        return "s"
    }
    fun timesAssign(other : B) : String {
        return "s"
    }
}

fun main(args : Array<String>) {
    var c = B()
    <!TYPE_MISMATCH!>c += B()<!>
    <!TYPE_MISMATCH!>c *= B()<!>
    <!TYPE_MISMATCH!>c /= B()<!>
    <!TYPE_MISMATCH!>c -= B()<!>
    <!TYPE_MISMATCH!>c %= B()<!>
}
